tests/source1/pass/expr_relational_op10.js
100 < 1;
// expected: false