tests/source1/fail/runtime_typecheck2.js
1 - false;
// expected: error: "boo type mismatch"